# bash-posix

./: .42shrc  .gitignore  CMakeLists.txt  Makefile  README  TODO  configure
doc/: 42sh.1  42sh.cpp
etc/: 42shrc
src/: 42sh.c  ast.c  ast_print.c  execution_ast.c  grammar.c  grammar_check.c  grammar_command.c  grammar_group.c  grammar_rule.c  handlePS1.c  lexer.c  linked_list.c  main.c  options.c  queue.c  stack.c
src/ast/: arithmetic.c  ast.c  ast_assignement.c  ast_print.c  execution_ast.c  functions.c  get_assignement.c  helper_exec.c
src/builtins/: break.c  cd.c  continue.c  exit.c  export.c  my_alias.c  my_echo.c  my_shopt.c  my_unalias.c  source.c
src/execution/: arithmetic.c  assignement.c  execution_ast.c  functions.c  get_assignement.c  helper_exec.c
src/grammar/: grammar_check.c  grammar_command.c  grammar_group.c  grammar_rule.c
src/history/: history.c
src/includes/: arithmeric.h  arithmetic.h  ast.h  ast_assignement.h  binary.h  builtins.h  execution_ast.h  file_handle.h  functions.h  globals.h  grammar.h  grammar_check.h  handlePS1.h  hardbs.h  helper_exec.h  history.h  lexer.h  linked_list.h  options.h  queue.h  stack.h  token.h  vector.h
src/lexer/: lexer.c
src/manual/: 42sh.cpp
src/prompt/: handlePS1.c
src/tests/: exec_main.c  grammar_main.c  lexer_main.c
src/tests/test_scripts/: 42sh.sh  ast.sh  grammar.sh  lexer.sh  set_env.sh  unit.sh
src/tests/test_suite/: conftest.py  lexer.yaml  test_ast.yml  test_grammar.yml  test_lexer.yml
src/tests/test_suite/env/: pip-selfcheck.json
src/tests/test_suite/test_42sh/: conftest.py  test_42sh.yml
src/tests/test_suite/test_ast/: conftest.py  test_ast.yml  test_lexer.yml
src/tests/test_suite/test_exec/: conftest.py  test_exec.yml
src/tests/test_suite/test_grammar/: conftest.py  test_grammar.yml
src/tests/test_suite/test_lexer/: conftest.py  test_lexer.yml
src/utils/: file_handle.c  globals.c  hardbs.c  linked_list.c  options.c  stack.c  vector.c
tests/: ast_main.c  grammar_main.c  lexer_main.c  test_main.c  test_options.sh
tests/test_scripts/: .__afsBC01  42sh.sh  check.sh  my_check.sh  requirements.txt  set_env.sh  test_options.sh  unit.sh
tests/test_suite/: conftest.py  test_42sh.yml  test_grammar.yml  test_lexer.yml
tests/test_suite/42sh_tests/: test_cases.yml  test_if.yml  test_loops.yml
tests/test_suite/test_ast/: conftest.py
tests/test_suite/test_files/: multi_cases.yml  test_arithmetic.yml  test_assignment.yml  test_builtins.yml  test_cases.yml  test_commands.yml  test_func.yml  test_if.yml  test_loops.yml  test_multi_cases.yml  test_pipes.yml  test_redirection.yml
